compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@property.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            struct Foo {\n                x: Int32 = 0;\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            5175167619020667705,
        ): Type(
            Struct(
                StructDefinition {
                    id: ItemId(
                        5175167619020667705,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:20:23,
                            },
                            type_arguments: [],
                            location: <internal>:20:23,
                        },
                        location: <internal>:20:23,
                    },
                    visibility: Private,
                    builtin: false,
                    properties: [
                        Property {
                            id: Property(
                                PropertyId {
                                    item: ItemId(
                                        5175167619020667705,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                            ),
                            prop_id: None,
                            visibility: Private,
                            name: Identifier {
                                name: "x",
                                location: <internal>:42:43,
                            },
                            property_type: Type {
                                id: ItemId(
                                    6143724420395906933,
                                ),
                                name: Path {
                                    root: [
                                        Namespace {
                                            name: Identifier {
                                                name: "std",
                                                location: <internal>:0:0,
                                            },
                                        },
                                    ],
                                    name: Type {
                                        name: Identifier {
                                            name: "Int32",
                                            location: <internal>:0:0,
                                        },
                                        type_arguments: [],
                                        location: <internal>:0:0,
                                    },
                                    location: <internal>:0:0,
                                },
                                location: <internal>:45:50,
                            },
                            default_value: Some(
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId(
                                            5175167619020667705,
                                        ),
                                        index: Idx(
                                            0,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    5175167619020667705,
                                                ),
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            5175167619020667705,
                                                        ),
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:53:54,
                                        },
                                    ),
                                    location: <internal>:53:54,
                                },
                            ),
                            location: <internal>:42:55,
                        },
                    ],
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    location: <internal>:13:69,
                },
            ),
        ),
    },
    statements: {},
    expressions: {
        ExpressionId {
            def: ItemId(
                5175167619020667705,
            ),
            index: Idx(
                0,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId(
                    5175167619020667705,
                ),
                index: Idx(
                    0,
                ),
            },
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId(
                            5175167619020667705,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    kind: Int(
                        IntLiteral {
                            id: ExpressionId {
                                def: ItemId(
                                    5175167619020667705,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                            value: 0,
                            kind: I32,
                        },
                    ),
                    location: <internal>:53:54,
                },
            ),
            location: <internal>:53:54,
        },
    },
}
