compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@property_no_default.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Foo {\n            x: Int32;\n        }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Struct(
                StructDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:7:10,
                            },
                            type_arguments: [],
                            location: <internal>:7:10,
                        },
                        location: <internal>:7:10,
                    },
                    visibility: Private,
                    builtin: false,
                    properties: [
                        Property {
                            id: Property(
                                PropertyId {
                                    item: ItemId {
                                        package: PackageId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    index: Idx(
                                        0,
                                    ),
                                },
                            ),
                            prop_id: None,
                            visibility: Private,
                            name: Identifier {
                                name: "x",
                                location: <internal>:25:26,
                            },
                            property_type: Type {
                                id: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        6143724420395906933,
                                    ),
                                },
                                name: Path {
                                    root: [
                                        Namespace {
                                            name: Identifier {
                                                name: "std",
                                                location: <internal>:0:0,
                                            },
                                        },
                                    ],
                                    name: Type {
                                        name: Identifier {
                                            name: "Int32",
                                            location: <internal>:28:33,
                                        },
                                        type_arguments: [],
                                        location: <internal>:28:33,
                                    },
                                    location: <internal>:28:33,
                                },
                                location: <internal>:28:33,
                            },
                            default_value: None,
                            location: <internal>:25:34,
                        },
                    ],
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    location: <internal>:0:44,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
