compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__struct_snapshots@pub_method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            impl Foo {\n                pub fn bar() -> Int32 {\n                    return 0;\n                }\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            13138428697284688615,
        ): Impl(
            Implementation {
                id: ItemId(
                    13138428697284688615,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        7990845552190622859,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Foo",
                                location: <internal>:18:21,
                            },
                        ),
                        location: <internal>:18:21,
                    },
                    type_params: [],
                    location: <internal>:18:21,
                },
                methods: [
                    MethodDefinition {
                        id: ItemId(
                            2919503673305580145,
                        ),
                        method_id: None,
                        visibility: Public,
                        name: Identifier {
                            name: "bar",
                            location: <internal>:47:50,
                        },
                        parameters: [],
                        type_parameters: TypeParameters {
                            inner: [],
                        },
                        return_type: Some(
                            Type {
                                id: ItemId(
                                    13608251888059153114,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [
                                                Named(
                                                    Identifier {
                                                        name: "std",
                                                        location: <internal>:0:0,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "Int32",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                    location: <internal>:0:0,
                                },
                                type_params: [],
                                location: <internal>:56:61,
                            },
                        ),
                        block: Some(
                            Block {
                                statements: [
                                    Statement {
                                        id: StatementId {
                                            def: ItemId(
                                                7990845552190622859,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        kind: Return(
                                            Return {
                                                id: StatementId {
                                                    def: ItemId(
                                                        7990845552190622859,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                value: Some(
                                                    Expression {
                                                        id: ExpressionId {
                                                            def: ItemId(
                                                                7990845552190622859,
                                                            ),
                                                            index: Idx(
                                                                1,
                                                            ),
                                                        },
                                                        location: <internal>:91:92,
                                                        kind: Literal(
                                                            Literal {
                                                                id: ExpressionId {
                                                                    def: ItemId(
                                                                        7990845552190622859,
                                                                    ),
                                                                    index: Idx(
                                                                        1,
                                                                    ),
                                                                },
                                                                location: <internal>:91:92,
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: ExpressionId {
                                                                            def: ItemId(
                                                                                7990845552190622859,
                                                                            ),
                                                                            index: Idx(
                                                                                1,
                                                                            ),
                                                                        },
                                                                        value: 0,
                                                                        kind: I32,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        location: <internal>:84:93,
                                    },
                                ],
                                location: <internal>:62:111,
                            },
                        ),
                        location: <internal>:40:111,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                location: <internal>:13:125,
            },
        ),
    },
    statements: {
        StatementId {
            def: ItemId(
                7990845552190622859,
            ),
            index: Idx(
                0,
            ),
        }: Statement {
            id: StatementId {
                def: ItemId(
                    7990845552190622859,
                ),
                index: Idx(
                    0,
                ),
            },
            kind: Return(
                Return {
                    id: StatementId {
                        def: ItemId(
                            7990845552190622859,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    value: Some(
                        Expression {
                            id: ExpressionId {
                                def: ItemId(
                                    7990845552190622859,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            location: <internal>:91:92,
                            kind: Literal(
                                Literal {
                                    id: ExpressionId {
                                        def: ItemId(
                                            7990845552190622859,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    location: <internal>:91:92,
                                    kind: Int(
                                        IntLiteral {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    7990845552190622859,
                                                ),
                                                index: Idx(
                                                    1,
                                                ),
                                            },
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            location: <internal>:84:93,
        },
    },
    expressions: {
        ExpressionId {
            def: ItemId(
                7990845552190622859,
            ),
            index: Idx(
                1,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId(
                    7990845552190622859,
                ),
                index: Idx(
                    1,
                ),
            },
            location: <internal>:91:92,
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId(
                            7990845552190622859,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:91:92,
                    kind: Int(
                        IntLiteral {
                            id: ExpressionId {
                                def: ItemId(
                                    7990845552190622859,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
